style.css
body{
    box-sizing: border-box;
    margin: 0;
    overflow-x: hidden;
}
.container{
    width: 100vw;
    /* margin: 0 5vw; */
}
h1{
    text-align: center;
}
#product_info{
    width: 55%;
    border: 2px solid lightgray;
    position: relative;
    margin: 0% auto;
    padding: 2% 4%;
}
.product_details{
    margin: 2% 0%;
}
.input_name{
    width: 45%;
    text-align: justify;
}
.inputs{
    width: 51%;
    float: right;
}
#choose_file{
    position: absolute;
    left: 41%; 
}
#add_product{
    width: 24%;
    margin: 3% 38% 0%;
    height: 2.5em;
    background-color: #007BFF;
    color: white;
    border: none;
    border-radius: 0.35em;
}
#product_catalogue_container{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    margin: 5% 5% 0%;
    width: 90vw;
}
.product_catalogue{
    border: 1px solid black;
    width: 31%;
    margin: 0.5%;
    padding-bottom: 0.25%;
    border-radius: 3px;
    position: relative;
}
.product_images{
    width: 50%;
    height: 210px;
    margin: 1% 25%;
    border-radius: 2%;
}
.details{
    display: flex;
    flex-direction: column;
}
.detail_from_localStorage{
    width: 50%;
    float: right;
    margin-right: 1%;
    margin-bottom: 1%;
}
span{
    font-weight: bold;
    font-size: large;
}
.detailSpan{
    margin-left: 1%;
    float: left;
    font-weight: bold;
    font-size: medium;
}
.update_btn,.delete_btn{
    width: 49%;
    color: white;
    border-radius: 3px;
    border: none;
    padding: 2% 0%;
}
.update_btn{
    margin: 0 0.25% 0 0.75%;
    background-color: #007BFF;
}
.delete_btn{
    margin: 0 0.5% 0 0.25%;
    background-color: red;
}

@media (min-width : 725px) and (max-width : 1240px){
    body{
        width: 100vw;
        margin: 0%;
    }
    .container{
        width: 100vw;
        margin: 0%;
    }
    #product_info{
        margin: 0% 5%;
        width: 80vw;
    }
    #product_catalogue_container{
        width: 90vw;
    }
    .product_catalogue{
        width: 47.5%;
    }
    .detailSpan{
        width: 45%;
        font-size: small;
    }
    .details :nth-child(n){
        margin-top: 1%;
    }
}
@media (min-width : 425px) and (max-width : 725px){
    #product_info{
        width: 80%;
    }
    .product_catalogue{
        width: 100%;
    }
    .detailSpan{
        width: 45%;
        font-size: small;
    }
    .details :nth-child(n){
        margin-top: 0%;
    }
}

